syntax = "proto3";
package chat;

option go_package = "github.com/glovenkevin/golang-konkurensi/pb/chat;chat";

message HelloResponse {
	string message = 1;
}

message CheckMyDataResponse {
	string message = 1;
	int32 code = 2;
}